Updated to support Java 9, now requiring Java 1.7.